--- a/index.html
+++ b/index.html
@@ -5,14 +5,10 @@
 		<meta charset="utf-8">
 		<title>平安黑科技</title>
 		<meta name="x5-fullscreen" content="true">
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no, minimal-ui" />
+		<meta name="viewport" content="width=device-width, initial-scale=0.5, user-scalable=0, minimal-ui" />
 		<meta name="format-detection" content="telephone=no, email=no">
 		<meta name="apple-mobile-web-app-capable" content="yes">
-		<meta name="apple-mobile-web-app-status-bar-style" content="black">
-		<meta name="apple-mobile-web-app-title" content="APP name">
-		<meta name="x5-orientation" content="landscape">
-		<meta name="x5-fullscreen" content="true">
-		<meta name="x5-page-mode" content="default">
+		<link rel="stylesheet" href="static/css/preload.css" />
 		<!--<link rel="shortcut icon" href="http://kpximg.oss-cn-shenzhen.aliyuncs.com/201705/07/055e141542914283b351421f2eeb6140.png">-->
 	</head>
 
@@ -20,6 +16,43 @@
 		<div id="app">
 
 		</div>
+		<div id="loadImg" class="loadImg">
+			<div class="progress">
+				<div class="loader">
+					<div class="loader-inner pacman">
+						<div></div>
+						<div></div>
+						<div></div>
+						<div></div>
+						<div></div>
+					</div>
+				</div>
+				<div class="preload">资源加载中(<span id="current">0</span>/<span id="total">0</span>)</div>
+			</div>
+		</div>
+		<div id="toast" class="toast"></div>
+		<script type="text/javascript" src="static/js/resLoader.js"></script>
+		<script type="text/javascript" src="static/js/preload.js"></script>
+		<script src="https://wx.nullexcept.com/s_static/js/three.min.js"></script>
+		<script src="https://wx.nullexcept.com/s_static/js/D.min.js"></script>
+		<script src="https://wx.nullexcept.com/s_static/js/doT.min.js"></script>
+		<script src="https://wx.nullexcept.com/s_static/js/uevent.min.js"></script>
+		<script src="https://wx.nullexcept.com/s_static/js/CanvasRenderer.js"></script>
+		<script src="https://wx.nullexcept.com/s_static/js/Projector.js"></script>
+		<script src="https://wx.nullexcept.com/s_static/js/photo-sphere-viewer.min.js"></script>
+		<script src="https://wx.nullexcept.com/s_static/js/DeviceOrientationControls.js"></script>
+		<script src="static/js/exif.js"></script>
+		<script>
+			//百度统计 
+			var _hmt = _hmt || [];
+			(function() {
+				var hm = document.createElement("script");
+				hm.src = "https://hm.baidu.com/hm.js?e425071bbac75d469be1039846fbdc5d";
+				var s = document.getElementsByTagName("script")[0];
+				s.parentNode.insertBefore(hm, s);
+			})();
+		</script>
+
 	</body>
 
 </html>
